gcc/testsuite/rust/rustc/ui/rfc-2565-param-attrs/param-attrs-2018.rs
// edition:2018

trait Trait2015 { fn foo(#[allow(C)] i32); }
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

